# JiraCounterCpp

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  counter.cpp  params.json
docs/: CMakeLists.txt  mainpage.md
include/: utils.hpp
include/jira/: jira_client.hpp  types.hpp
src/: CMakeLists.txt  jira_client.cpp  types.cpp  utils.cpp
tests/: CMakeLists.txt  jira-unit.cpp
